--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,10 +12,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Build with Jenkins
-        uses: jenkins/declarative-action@v1
+        uses: appleboy/jenkins-action@master
         with:
-          jenkins_url: 'http://20.107.39.99'
-          jenkins_user: ${{ secrets.JENKINS_USER }}
-          jenkins_token: ${{ secrets.JENKINS_PASSWORD }}
-          jenkins_file_path: 'frontend-build/Jenkinsfile'
+          url: 'http://20.107.39.99'
+          user: ${{ secrets.JENKINS_USER }}
+          token: ${{ secrets.JENKINS_PASSWORD }}
+          job: 'frontend'
+          build_wait_time: 10
 
